# app-review-insights

./: .gitignore  1.txt  2.txt  AGENTS.md  CLAUDE.md  README.md
.claude/rules/: constraints.md  superpower.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  event_manager.py  main.py  pipeline.py
backend/app/llm/: base.py  factory.py  mock.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: import_.py
backend/app/services/: agent.py  ai_cleaner.py  cleaner.py  planner.py  sampler.py  scoper.py  testgen.py  validator.py
backend/app/services/collectors/: rss.py
backend/data/: app_reviews.db
backend/tests/: test_agent.py  test_planner.py  test_testgen.py
demo/: README.md  cleaner_demo.py  importer_demo.py  rss_feed_demo.py  sampler_demo.py
demo/data/: raw_reviews_839285684_20260718T134618.json  raw_reviews_839285684_20260718T134702.json  raw_reviews_839285684_20260719T042013.json  raw_reviews_839285684_20260719T042410.json
docs/superpowers/plans/: 2026-07-18-app-review-insights-plan.md  2026-07-19-langchain-migration-plan.md
docs/superpowers/specs/: 2026-07-18-app-review-insights-design.md  2026-07-19-langchain-migration-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AppInput.tsx  FindingsView.tsx  ImportView.tsx  LimitationsView.tsx  PrdView.tsx  ProgressPanel.tsx  ReviewTable.tsx  StageCard.tsx  StageResult.tsx  TestCasesView.tsx  TraceabilityView.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/types/: index.ts
sample_outputs/app_id839285684/: cleaned_reviews.json  findings.json  limitations.json  prd.json  task_meta.json  traceability_report.json
test_data/: test_data.json
