[project]
name = "app-review-insights"
version = "0.1.0"
description = "iOS App Store 评论智能分析平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pydantic==2.10.3",
    "langchain==0.3.13",
    "langchain-deepseek==0.1.3",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
