[project]
name = "app-review-insights"
version = "0.1.0"
description = "iOS App Store 评论智能分析平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pydantic==2.10.3",
    "langchain==0.3.13",
    "langchain-deepseek==0.1.3",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "python-multipart==0.0.32",
    "aiohappyeyeballs==2.7.1",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.14.2",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.9",
    "click==8.4.2",
    "colorama==0.4.6",
    "distro==1.9.0",
    "frozenlist==1.8.0",
    "greenlet==3.5.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.8.0",
    "idna==3.18",
    "iniconfig==2.3.0",
    "jiter==0.16.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain-core==0.3.63",
    "langchain-openai==0.3.19",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.2.11",
    "multidict==6.7.1",
    "numpy==2.5.1",
    "openai==1.109.1",
    "orjson==3.11.9",
    "packaging==24.2",
    "pluggy==1.6.0",
    "propcache==0.5.2",
    "pydantic-core==2.27.1",
    "pygments==2.20.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pyyaml==6.0.3",
    "regex==2026.7.19",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "sniffio==1.3.1",
    "starlette==0.41.3",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.69.0",
    "typing-extensions==4.16.0",
    "urllib3==2.7.0",
    "watchfiles==1.2.0",
    "websockets==16.1.1",
    "yarl==1.24.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]
